Fix mis-alignment of headlines

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,10 +11,6 @@ body {
     font-family: 'Jetbrains Mono Regular', serif;
 }
 
-h1 {
-    line-height: 1.1em;
-}
-
 @font-face {
     font-family: 'JetBrains Mono Regular';
     font-style: normal;
